# billie-server

./: Cargo.toml  Dockerfile
migrations/: 20240612130910_create_user.sql
src/: lib.rs  main.rs
src/handlers/: hello.rs  mod.rs  user.rs
src/models/: user.rs
src/utils/: mod.rs
